@@ -65,7 +65,7 @@ class TemplatesController extends JController
 			$msg = JText::_('Error Saving Template') . $model->getError();
 		}
 
-		$this->setRedirect('index.php?option='.$option.'&task=edit&cid[]='.$id.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&id='.$id.'&client='.$client->id, $msg);
 	}
 
 	function cancel()
@@ -96,7 +96,7 @@ class TemplatesController extends JController
 		}
 		$msg = JText::_('Template Added');
 		$newid = $model->add();
-		$this->setRedirect('index.php?option='.$option.'&task=edit&cid[]='.$newid.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&id='.$newid.'&client='.$client->id, $msg);
 
 	}
 
@@ -105,7 +105,7 @@ class TemplatesController extends JController
 	 */
 	function delete() {
 		// Check for request forgeries
-		JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
+		//JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
 
 		$option		= JRequest::getVar('option', '', '', 'cmd');
 
@@ -125,8 +125,7 @@ class TemplatesController extends JController
 		} else {
 			$msg = JText::_('Error Saving Template') . $model->getError();
 		}
-		$otherid = $model->getOtherId();
-		$this->setRedirect('index.php?option='.$option.'&task=edit&cid[]='.$otherid.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&client='.$client->id, $msg);
 	}
 
 	/*
@@ -192,7 +191,6 @@ class TemplatesController extends JController
 		$model = $this->getModel('source');
 		$client		= &$model->getClient();
 		$template	= &$model->getTemplate();
-		$id			= &$model->getId();
 
 		if (!$template) {
 			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
@@ -214,12 +212,12 @@ class TemplatesController extends JController
 		switch($task)
 		{
 			case 'apply_source':
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_source&id='.$id, $msg);
+				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_source&template='.$template, $msg);
 				break;
 
 			case 'save_source':
 			default:
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&cid[]='.$id, $msg);
+				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&template='.$template, $msg);
 				break;
 		}
 	}
@@ -283,12 +281,12 @@ class TemplatesController extends JController
 		switch($task)
 		{
 			case 'apply_css':
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_css&id='.$id.'&filename='.$filename, $msg);
+				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_css&template='.$template.'&id='.$id.'&filename='.$filename, $msg);
 				break;
 
 			case 'save_css':
 			default:
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&cid[]='.$id, $msg);
+				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&template='.$template, $msg);
 				break;
 		}
 	}
