@@ -62,25 +62,10 @@ class TemplatesModelCssedit extends JModel
 	{
 		parent::__construct();
 
-		$id	= JRequest::getVar('id', '', 'method', 'cmd');
-		$this->setId($id);
+		$this->_id		= JRequest::getVar('id', '', 'method', 'cmd');
+		$this->_template = JRequest::getVar('template');
 		$this->_filename	= JRequest::getVar('filename', '', 'method', 'cmd');
 		$this->_client	= &JApplicationHelper::getClientInfo(JRequest::getVar('client', '0', '', 'int'));
-	}
-
-	/**
-	 * Method to set the Template identifier
-	 *
-	 * @access	public
-	 * @param	int Template identifier
-	 */
-	function setId($id)
-	{
-		// Set Template id and wipe data
-		require_once JPATH_COMPONENT.DS.'helpers'.DS.'template.php';
-		$this->_id		= $id;
-		$this->_template = TemplatesHelper::getTemplateName($id);
-		$this->_data	= null;
 	}
 
 	/**
