@@ -25,7 +25,7 @@
 	</tr>
 </table>
 <input type="hidden" name="id" value="<?php echo $this->id; ?>" />
-<input type="hidden" name="cid[]" value="<?php echo $this->id; ?>" />
+<input type="hidden" name="template" value="<?php echo $this->template; ?>" />
 <input type="hidden" name="option" value="<?php echo $this->option;?>" />
 <input type="hidden" name="task" value="" />
 <input type="hidden" name="client" value="<?php echo $this->client->id;?>" />
