@@ -42,7 +42,6 @@ class TemplatesViewSource extends JView
 		$content	= &$this->get('Data');
 		$client		= &$this->get('Client');
 		$template	= &$this->get('Template');
-		$id	= &$this->get('id');
 
 		// Set FTP credentials, if given
 		jimport('joomla.client.helper');
@@ -52,7 +51,6 @@ class TemplatesViewSource extends JView
 		$this->assignRef('client',		$client);
 		$this->assignRef('ftp',			$ftp);
 		$this->assignRef('template',	$template);
-		$this->assignRef('id',			$id);
 		$this->assignRef('content',	$content);
 
 		parent::display($tpl);
